--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <div class="container" id="gamePrin">
                             <center>
                                 <nobr>
-                                    <div class="columns" id="col">
+                                    <div class="columns" id="col" style="display:flex;">
                                         <div class="column" id="col1">
                                             <center>
                                                 <div id="boxF" class="box" onClick="mark(1)" canmark="true">
